--- a/index.html
+++ b/index.html
@@ -17,10 +17,66 @@
 
     <ul>
     <div class="cartas">
-        <div class="carta" onclick="virar(this);">
-            <div class="frente face"><img  class="piriquito" src="./Imagens/Arquivos Úteis - Projeto 04 - Parrot Card Game/back.png" /></div>
-            <div class="verso face escondido"><img class="piriquito" src="./Imagens/Arquivos Úteis - Projeto 04 - Parrot Card Game/bobrossparrot.gif" /></div>
-        </div>
+        
+        <li><div class="carta" onclick="virar(this);">
+            <div class="verso"><img  class="piriquito" src="./Imagens/back.png" /></div>
+            <div class="frente"><img class="piriquito" src="./Imagens/${piriquitosEmbaralhados[i]}parrot.gif" /></div>
+            <h1>${piriquitosEmbaralhados[i]}</h1>
+            </div></li>
+            <li><div class="carta" onclick="virar(this);">
+                <div class="verso"><img  class="piriquito" src="./Imagens/back.png" /></div>
+                <div class="frente"><img class="piriquito" src="./Imagens/${piriquitosEmbaralhados[i]}parrot.gif" /></div>
+                <h1>${piriquitosEmbaralhados[i]}</h1>
+                </div></li><li><div class="carta" onclick="virar(this);">
+                    <div class="verso"><img  class="piriquito" src="./Imagens/back.png" /></div>
+                    <div class="frente"><img class="piriquito" src="./Imagens/${piriquitosEmbaralhados[i]}parrot.gif" /></div>
+                    <h1>${piriquitosEmbaralhados[i]}</h1>
+                    </div></li><li><div class="carta" onclick="virar(this);">
+                        <div class="verso"><img  class="piriquito" src="./Imagens/back.png" /></div>
+                        <div class="frente"><img class="piriquito" src="./Imagens/${piriquitosEmbaralhados[i]}parrot.gif" /></div>
+                        <h1>${piriquitosEmbaralhados[i]}</h1>
+                        </div></li><li><div class="carta" onclick="virar(this);">
+                            <div class="verso"><img  class="piriquito" src="./Imagens/back.png" /></div>
+                            <div class="frente"><img class="piriquito" src="./Imagens/${piriquitosEmbaralhados[i]}parrot.gif" /></div>
+                            <h1>${piriquitosEmbaralhados[i]}</h1>
+                            </div></li><li><div class="carta" onclick="virar(this);">
+                                <div class="verso"><img  class="piriquito" src="./Imagens/back.png" /></div>
+                                <div class="frente"><img class="piriquito" src="./Imagens/${piriquitosEmbaralhados[i]}parrot.gif" /></div>
+                                <h1>${piriquitosEmbaralhados[i]}</h1>
+                                </div></li><li><div class="carta" onclick="virar(this);">
+                                    <div class="verso"><img  class="piriquito" src="./Imagens/back.png" /></div>
+                                    <div class="frente"><img class="piriquito" src="./Imagens/${piriquitosEmbaralhados[i]}parrot.gif" /></div>
+                                    <h1>${piriquitosEmbaralhados[i]}</h1>
+                                    </div></li><li><div class="carta" onclick="virar(this);">
+                                        <div class="verso"><img  class="piriquito" src="./Imagens/back.png" /></div>
+                                        <div class="frente"><img class="piriquito" src="./Imagens/${piriquitosEmbaralhados[i]}parrot.gif" /></div>
+                                        <h1>${piriquitosEmbaralhados[i]}</h1>
+                                        </div></li><li><div class="carta" onclick="virar(this);">
+                                            <div class="verso"><img  class="piriquito" src="./Imagens/back.png" /></div>
+                                            <div class="frente"><img class="piriquito" src="./Imagens/${piriquitosEmbaralhados[i]}parrot.gif" /></div>
+                                            <h1>${piriquitosEmbaralhados[i]}</h1>
+                                            </div></li><li><div class="carta" onclick="virar(this);">
+                                                <div class="verso"><img  class="piriquito" src="./Imagens/back.png" /></div>
+                                                <div class="frente"><img class="piriquito" src="./Imagens/${piriquitosEmbaralhados[i]}parrot.gif" /></div>
+                                                <h1>${piriquitosEmbaralhados[i]}</h1>
+                                                </div></li><li><div class="carta" onclick="virar(this);">
+                                                    <div class="verso"><img  class="piriquito" src="./Imagens/back.png" /></div>
+                                                    <div class="frente"><img class="piriquito" src="./Imagens/${piriquitosEmbaralhados[i]}parrot.gif" /></div>
+                                                    <h1>${piriquitosEmbaralhados[i]}</h1>
+                                                    </div></li><li><div class="carta" onclick="virar(this);">
+                                                        <div class="verso"><img  class="piriquito" src="./Imagens/back.png" /></div>
+                                                        <div class="frente"><img class="piriquito" src="./Imagens/${piriquitosEmbaralhados[i]}parrot.gif" /></div>
+                                                        <h1>${piriquitosEmbaralhados[i]}</h1>
+                                                        </div></li><li><div class="carta" onclick="virar(this);">
+                                                            <div class="verso"><img  class="piriquito" src="./Imagens/back.png" /></div>
+                                                            <div class="frente"><img class="piriquito" src="./Imagens/${piriquitosEmbaralhados[i]}parrot.gif" /></div>
+                                                            <h1>${piriquitosEmbaralhados[i]}</h1>
+                                                            </div></li><li><div class="carta" onclick="virar(this);">
+                                                                <div class="verso"><img  class="piriquito" src="./Imagens/back.png" /></div>
+                                                                <div class="frente"><img class="piriquito" src="./Imagens/${piriquitosEmbaralhados[i]}parrot.gif" /></div>
+                                                                <h1>${piriquitosEmbaralhados[i]}</h1>
+                                                                </div></li>
+
     </div>
 </ul> 
 
