versão completa sem bonus

--- a/index.html
+++ b/index.html
@@ -12,72 +12,14 @@
 </head>
 <body>
     <div class="titulo">
-        <h1 class="texto">PARROT CARD GAME</h1>
+        <h2 class="texto">PARROT CARD GAME</h2>
     </div>
-
+    <div class="relogio">0</div>
     <ul>
     <div class="cartas">
-        
-        <li><div class="carta" onclick="virar(this);">
-            <div class="verso"><img  class="piriquito" src="./Imagens/back.png" /></div>
-            <div class="frente"><img class="piriquito" src="./Imagens/${piriquitosEmbaralhados[i]}parrot.gif" /></div>
-            <h1>${piriquitosEmbaralhados[i]}</h1>
-            </div></li>
-            <li><div class="carta" onclick="virar(this);">
-                <div class="verso"><img  class="piriquito" src="./Imagens/back.png" /></div>
-                <div class="frente"><img class="piriquito" src="./Imagens/${piriquitosEmbaralhados[i]}parrot.gif" /></div>
-                <h1>${piriquitosEmbaralhados[i]}</h1>
-                </div></li><li><div class="carta" onclick="virar(this);">
-                    <div class="verso"><img  class="piriquito" src="./Imagens/back.png" /></div>
-                    <div class="frente"><img class="piriquito" src="./Imagens/${piriquitosEmbaralhados[i]}parrot.gif" /></div>
-                    <h1>${piriquitosEmbaralhados[i]}</h1>
-                    </div></li><li><div class="carta" onclick="virar(this);">
-                        <div class="verso"><img  class="piriquito" src="./Imagens/back.png" /></div>
-                        <div class="frente"><img class="piriquito" src="./Imagens/${piriquitosEmbaralhados[i]}parrot.gif" /></div>
-                        <h1>${piriquitosEmbaralhados[i]}</h1>
-                        </div></li><li><div class="carta" onclick="virar(this);">
-                            <div class="verso"><img  class="piriquito" src="./Imagens/back.png" /></div>
-                            <div class="frente"><img class="piriquito" src="./Imagens/${piriquitosEmbaralhados[i]}parrot.gif" /></div>
-                            <h1>${piriquitosEmbaralhados[i]}</h1>
-                            </div></li><li><div class="carta" onclick="virar(this);">
-                                <div class="verso"><img  class="piriquito" src="./Imagens/back.png" /></div>
-                                <div class="frente"><img class="piriquito" src="./Imagens/${piriquitosEmbaralhados[i]}parrot.gif" /></div>
-                                <h1>${piriquitosEmbaralhados[i]}</h1>
-                                </div></li><li><div class="carta" onclick="virar(this);">
-                                    <div class="verso"><img  class="piriquito" src="./Imagens/back.png" /></div>
-                                    <div class="frente"><img class="piriquito" src="./Imagens/${piriquitosEmbaralhados[i]}parrot.gif" /></div>
-                                    <h1>${piriquitosEmbaralhados[i]}</h1>
-                                    </div></li><li><div class="carta" onclick="virar(this);">
-                                        <div class="verso"><img  class="piriquito" src="./Imagens/back.png" /></div>
-                                        <div class="frente"><img class="piriquito" src="./Imagens/${piriquitosEmbaralhados[i]}parrot.gif" /></div>
-                                        <h1>${piriquitosEmbaralhados[i]}</h1>
-                                        </div></li><li><div class="carta" onclick="virar(this);">
-                                            <div class="verso"><img  class="piriquito" src="./Imagens/back.png" /></div>
-                                            <div class="frente"><img class="piriquito" src="./Imagens/${piriquitosEmbaralhados[i]}parrot.gif" /></div>
-                                            <h1>${piriquitosEmbaralhados[i]}</h1>
-                                            </div></li><li><div class="carta" onclick="virar(this);">
-                                                <div class="verso"><img  class="piriquito" src="./Imagens/back.png" /></div>
-                                                <div class="frente"><img class="piriquito" src="./Imagens/${piriquitosEmbaralhados[i]}parrot.gif" /></div>
-                                                <h1>${piriquitosEmbaralhados[i]}</h1>
-                                                </div></li><li><div class="carta" onclick="virar(this);">
-                                                    <div class="verso"><img  class="piriquito" src="./Imagens/back.png" /></div>
-                                                    <div class="frente"><img class="piriquito" src="./Imagens/${piriquitosEmbaralhados[i]}parrot.gif" /></div>
-                                                    <h1>${piriquitosEmbaralhados[i]}</h1>
-                                                    </div></li><li><div class="carta" onclick="virar(this);">
-                                                        <div class="verso"><img  class="piriquito" src="./Imagens/back.png" /></div>
-                                                        <div class="frente"><img class="piriquito" src="./Imagens/${piriquitosEmbaralhados[i]}parrot.gif" /></div>
-                                                        <h1>${piriquitosEmbaralhados[i]}</h1>
-                                                        </div></li><li><div class="carta" onclick="virar(this);">
-                                                            <div class="verso"><img  class="piriquito" src="./Imagens/back.png" /></div>
-                                                            <div class="frente"><img class="piriquito" src="./Imagens/${piriquitosEmbaralhados[i]}parrot.gif" /></div>
-                                                            <h1>${piriquitosEmbaralhados[i]}</h1>
-                                                            </div></li><li><div class="carta" onclick="virar(this);">
-                                                                <div class="verso"><img  class="piriquito" src="./Imagens/back.png" /></div>
-                                                                <div class="frente"><img class="piriquito" src="./Imagens/${piriquitosEmbaralhados[i]}parrot.gif" /></div>
-                                                                <h1>${piriquitosEmbaralhados[i]}</h1>
-                                                                </div></li>
-
     </div>
+
+    <div class="congrats"></div>
 </ul> 
 
 
