versão completa com o bonus do relogio

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <div class="titulo">
         <h2 class="texto">PARROT CARD GAME</h2>
     </div>
-    <div class="relogio">0</div>
+    <div class="tempo"><span>Tempo: </span><span class="relogio">0</span></div>
     <ul>
     <div class="cartas">
     </div>
 
-    <div class="congrats"></div>
+
 </ul> 
 
 
